# OpenCV2-Computer-Vision-Programming-Understanding

./: README.md  README.md~
Chapter_01/firstcode/: CMakeLists.txt  firstcode.cpp
Chapter_01/secondcode/: CMakeLists.txt  Display_Img.cpp
Chapter_02/addImage/: CMakeLists.txt~  addImage.cpp
Chapter_02/colorReduce/: CMakeLists.txt  colorReduce.cpp
Chapter_02/contrast/: CMakeLists.txt~  contrast.cpp~
Chapter_02/saltImage/: CMakeLists.txt~  saltImage.cpp
Chapter_03/colorController/: CMakeLists.txt~  colorDetectController.cpp  colorDetectController.hpp  colorDetection.cpp  colordetector.hpp
Chapter_03/colorDetection/: CMakeLists.txt~  colordetector.cpp
Chapter_04/histograms/: CMakeLists.txt~  histogram.hpp  histograms.cpp
Chapter_04/meanshift/: CMakeLists.txt~  colorhistogram.hpp  finder.cpp  objectfinder.hpp
Chapter_04/objectfinder/: CMakeLists.txt  colorhistogram.hpp  objectfinder.cpp
Chapter_04/retrieve/: CMakeLists.txt~  imageComparator.hpp  retrieve.cpp
Chapter_05/morphology/: CMakeLists.txt  morphology.cpp
Chapter_05/mprpho2/: CMakeLists.txt~  morpho2.cpp  morphoFeatures.hpp
Chapter_05/watershed/: CMakeLists.txt~  segment.cpp  watershedSegmentation.hpp
Chapter_06/directional_filter/: CMakeLists.txt~  directional_filter.cpp  laplacianZC.hpp
Chapter_06/filter/: CMakeLists.txt  filter.cpp
Chapter_07/blobs/: CMakeLists.txt~  blobs.cpp
Chapter_07/contour/: CMakeLists.txt  contour.cpp  edgedetector.hpp  linefinder.hpp
Chapter_08/interestPoints/: CMakeLists.txt~  harrisDetector.hpp  harrisDetector.hpp~  interestPoints.cpp  log
Chapter_08/tracking/: CMakeLists.txt~  tracking.cpp
Chapter_09/calibrate/: CMakeLists.txt  CameraCalibrator.cpp  CameraCalibrator.hpp  calibrate.cpp
Chapter_09/estimateF/: CMakeLists.txt~  estimateF.cpp  log
Chapter_09/estimateH/: CMakeLists.txt  estimateH.cpp  log  matcher.hpp
Chapter_09/robustmatching/: CMakeLists.txt  Untitled Document  log~  robustmatching.cpp
Chapter_10/foreground/: BGFGSegmentor.hpp  CMakeLists.txt~  foreground.cpp
Chapter_10/tracking/: CMakeLists.txt  featuretracker.hpp  tracking.cpp
Chapter_10/videoprocess/: CMakeLists.txt  videoprocessing.cpp  videoprocessor.hpp
